FIX: auction info below the fold on mobile

--- a/packages/nouns-webapp/src/components/Auction/Auction.module.css
+++ b/packages/nouns-webapp/src/components/Auction/Auction.module.css
@@ -45,6 +45,5 @@
     width: 80%;
     margin-left: 10%;
     margin-right: 10%;
-    margin-top: 2rem;
   }
 }
